force-app/main/default/objects/LLC_BI__LLC_LoanDocument__c/LLC_BI__LLC_LoanDocument__c.object-meta.xml
<CustomObject>
    <label>LLC_LoanDocument</label>
    <nameField>
        <label>LLC_LoanDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLC_LoanDocument</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>