force-app/main/default/objects/LLC_BI__LLC_LoanDocument__c/fields/LLC_BI__dueDaysPrior__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__dueDaysPrior__c</fullName>
    <description>This field is not currently used.</description>
    <label>Due Days Prior</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>