force-app/main/default/objects/LLC_BI__LLC_LoanDocument__c/fields/LLC_BI__firstReview__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__firstReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not currently used.</description>
    <label>First Review</label>
    <type>Checkbox</type>
</CustomField>