force-app/main/default/objects/LLC_BI__LLC_LoanDocument__c/fields/LLC_BI__sortOrder__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__sortOrder__c</fullName>
    <description>This field is not currently used.</description>
    <label>Sort</label>
    <length>3</length>
    <type>Text</type>
</CustomField>